--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "ListCart",
   "short_name": "ListCart",
-  "start_url": ".",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#6c63ff",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "./images/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "./images/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
