--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
-  "name": "ListCart",
-  "short_name": "ListCart",
-  "start_url": "./index.html",
-  "display": "standalone",
-  "background_color": "#121212",
-  "theme_color": "#6c63ff",
-  "icons": [
-    {
-      "src": "./images/icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./images/icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "ListCart",
+    "short_name": "ListCart",
+    "description": "Your simple shopping list app.",
+    "start_url": "./",
+    "display": "standalone",
+    "background_color": "#f4f7f6",
+    "theme_color": "#007bff",
+    "icons": [
+        {
+            "src": "./images/icons/icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "./images/icons/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
